Cambio footer a Colombia mijo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     <footer>
         <section class="barra-footer">
-            <div>Colombia mijitico</div>
+            <div>Colombia mijo</div>
             <nav>
                 <ul class="nav-footer">
                     <div>
