Se agrego un aviso de advertencia del clon-de-google

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                         <input class="btn-buscador__btn" type="submit" value="Voy a tener suerte">
                     </div>
                 </form>
+                <p class="google__aviso">
+                    Warninig: This is a didactic example of a Clone of google,
+                    This is not an official google page. <br>
+                    Aviso: Esto es ejemplo didáctico de un Clon de google, 
+                    Esto no es una página oficial de google.
+                </p>
             </section>
         </main>
     </section>
